Fixed bug where the items were being backdated by 1 day. Fixed another bug where the item list in the planner would overflow the page

--- a/src/assets/styles/_planner.scss
+++ b/src/assets/styles/_planner.scss
@@ -140,6 +140,7 @@
     height: 100%;
     border-radius: 10px;
     background-color: $primary-background;
+    max-height:650px;
 }
 
 .project-title-container {
@@ -271,6 +272,10 @@
     padding: 5px;
     border-radius: 5px;
     width: 300px;
+    min-height: 200px;
+    height: max-content;
+    max-height: 300px;
+    overflow: auto;
 
     pre {
         white-space: pre-wrap;
